@@ -1,5 +1,9 @@
 2001-03-10  Bruno Haible  <haible@clisp.cons.org>
 
+	* localcharset.c (locale_charset): Allow wildcard syntax. Resolve
+	alias also if codeset is empty.
+	* config.charset (BeOS): Use wildcard syntax.
+
 	* loadmsgcat.c (_nl_load_domain): locale_charset() doesn't return NULL
 	any more.
 
